# BitcoinUSTbills-main

./: Cargo.toml  README.md  dfx.json  package-lock.json  package-lock.json.backup  package.json  svelte.config.js  vite.config.ts
scripts/: deploy-local.sh
src/backend/: Cargo.toml
src/backend/src/: errors.rs  guard.rs  handlers.rs  lib.rs  storage.rs  store.rs  types.rs  utils.rs
src/declarations/backend/: backend.did  backend.did.d.ts  backend.did.js
src/frontend/src/lib/: agent.ts  api.mock.ts  api.ts  auth.ts  const.ts  types.ts  utils.ts
src/frontend/src/lib/components/: Card.svelte  Card.test.ts  Form.svelte  Form.test.ts
src/frontend/src/lib/components/ui/: Card.svelte  IconCheck.svelte  Input.svelte  Tag.svelte  Toasts.svelte
src/frontend/src/lib/types/: index.ts
src/frontend/src/routes/: +layout.svelte  +page.svelte
src/frontend/src/routes/public-ledger/: +page.svelte
