[package]
name = "backend"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.4"
ic-cdk = "0.18.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ic-stable-structures = "0.7.0"
ic-cdk-timers = "0.12.2"
sha2 = "0.10.8"
hex = "0.4.3"
time = "0.3.34"


[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
proptest = "1.0"
